upgrading spring and commons libraries