@@ -5,7 +5,7 @@
   <parent>
     <groupId>org.gbif</groupId>
     <artifactId>motherpom</artifactId>
-    <version>56</version>
+    <version>58-SNAPSHOT</version>
   </parent>
 
   <artifactId>gbif-common-ws</artifactId>
@@ -31,30 +31,31 @@
   </distributionManagement>
 
   <properties>
-    <spring-boot.version>2.3.12.RELEASE</spring-boot.version>
-    <spring.version>5.2.12.RELEASE</spring.version>
-    <spring-cloud-openfeign.version>2.2.6.RELEASE</spring-cloud-openfeign.version>
-    <spring-retry.version>1.3.1</spring-retry.version>
+    <java.version>11</java.version>
+    <spring-boot.version>3.2.5</spring-boot.version>
+    <spring.version>6.1.6</spring.version>
+    <spring-cloud-openfeign.version>4.1.1</spring-cloud-openfeign.version>
+    <spring-retry.version>2.0.6</spring-retry.version>
 
     <gbif-api.version>1.14.2</gbif-api.version>
     <gbif-common.version>0.52</gbif-common.version>
 
     <aopalliance.version>1.0</aopalliance.version>
-    <jackson.version>2.11.3</jackson.version>
+    <jackson.version>2.17.1</jackson.version>
     <jsr305.version>3.0.1</jsr305.version>
     <jsr250.version>1.0</jsr250.version>
-    <junit.version>5.8.1</junit.version>
-    <logback.version>1.2.3</logback.version>
+    <junit.version>5.10.2</junit.version>
+    <logback.version>1.4.14</logback.version>
     <mockito.version>3.12.4</mockito.version>
-    <slf4j.version>1.7.30</slf4j.version>
+    <slf4j.version>2.0.7</slf4j.version>
     <validation-api.version>2.0.1.Final</validation-api.version>
-    <feign.version>10.11</feign.version>
+    <feign.version>13.2.1</feign.version>
     <feign-form.version>3.8.0</feign-form.version>
     <commons-codec.version>1.13</commons-codec.version>
     <commons-beanutils.version>1.9.4</commons-beanutils.version>
     <commons-io.version>2.7</commons-io.version>
     <commons-lang3.version>3.10</commons-lang3.version>
-    <lombok.version>1.18.10</lombok.version>
+    <lombok.version>1.18.32</lombok.version>
     <wiremock.version>2.21.0</wiremock.version>
 
     <maven-surefire-plugin.version>2.22.2</maven-surefire-plugin.version>
@@ -307,6 +308,7 @@
         <version>${maven-surefire-plugin.version}</version>
         <configuration>
           <argLine>${surefireArgLine}</argLine>
+          <argLine>--add-exports java.xml/com.sun.org.apache.xerces.internal.jaxp=ALL-UNNAMED</argLine>
         </configuration>
       </plugin>
 
